# whatstat-cli

./: .gitignore  Cargo.toml  LICENCE  README.md
src/: lib.rs  main.rs  utils.rs
